dom/html/HTMLMediaElement.cpp
@@ -3648,7 +3648,6 @@ HTMLMediaElement::HTMLMediaElement(already_AddRefed<mozilla::dom::NodeInfo>& aNo
     mDefaultPlaybackStartPosition(0.0),
     mIsAudioTrackAudible(false),
     mHasSuspendTaint(false),
-    mMediaTracksConstructed(false),
     mVisibilityState(Visibility::UNTRACKED),
     mErrorSink(new ErrorSink(this)),
     mAudioChannelWrapper(new AudioChannelAgentCallback(this, mAudioChannel))
@@ -7321,11 +7320,7 @@ HTMLMediaElement::GetDocument() const
 void
 HTMLMediaElement::ConstructMediaTracks(const MediaInfo* aInfo)
 {
-  if (mMediaTracksConstructed || !aInfo) {
-    return;
-  }
-
-  mMediaTracksConstructed = true;
+  MOZ_ASSERT(aInfo);
 
   AudioTrackList* audioList = AudioTracks();
   if (audioList && aInfo->HasAudio()) {
@@ -7359,8 +7354,6 @@ HTMLMediaElement::RemoveMediaTracks()
   if (videoList) {
     videoList->RemoveTracks();
   }
-
-  mMediaTracksConstructed = false;
 }
 
 class MediaElementGMPCrashHelper : public GMPCrashHelper
